<resources>
    <string name="app_name">Ecommerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="thumbnail">thumbnail</string>
    <string name="product_name">Learn to code with python and Java</string>
    <string name="product_unit_price">$49.99</string>
    <string name="product_name_dummy">Learning to code JavaScript</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="unit_price">Unit Price:\ \ \ </string>
    <string name="dollar_sign">$</string>
    <string name="unit_in_stock">Units in Stock:\ \ \ </string>
    <string name="search_for_product">Search for product</string>
    <string name="delete_item">Delete item</string>
    <string name="checkout">Checkout</string>
    <string name="open_cart">Open Cart</string>
    <string name="cart_icon">Cart_icon</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="billing_address">Billing Address</string>
    <string name="copy_bill_to_ship">Shipping and Billing Address are the same</string>
    <string name="submit">Submit</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="select_item">Select Item</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
</resources>